# ConsoleMath

./: CMakeLists.txt  README.md  char.cpp  char.h  expression.cpp  expression.h  function.cpp  function.h  local_math.cpp  local_math.h  main.cpp  number.h  parse_tree.cpp  parse_tree.h  parser.cpp  parser.h  symbol_table.cpp  symbol_table.h  tokenizer.cpp  tokenizer.h
